<resources>
    <string name="app_name">My Application</string>
    <string name="cal_val">0</string>
    <string name="clear">C</string>
    <string name="plusmin">+/-</string>
    <string name="percentage">%</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplication">x</string>
    <string name="FOUR">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="result">=</string>
</resources>