<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    >



    <TextView
        android:id="@+id/textval"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/cal_val"
        android:textAlignment="textEnd"
        android:textSize="80sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClear"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clear"
            app:cornerRadius="0dp"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnSign"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/plusmin"
            android:textSize="30sp"
            app:cornerRadius="0dp"/>

        <Button
            android:id="@+id/btnPercent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/percentage"
            android:textSize="30sp"
            app:cornerRadius="0dp"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/division"
            android:textSize="30sp"
            app:cornerRadius="0dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/seven"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btn8"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/eight"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btn9"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/nine"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/multiplication"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/FOUR"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btn5"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/five"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btn6"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/six"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btnSubtract"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/minus"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/one"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btn2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/two"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btn3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/three"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btnAdd"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/add"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/zero"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btnDecimal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/dot"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btnEquals"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cornerRadius="0dp"
            android:text="@string/result"
            android:layout_margin="2dp"
            android:textSize="30sp"
            />


    </LinearLayout>

</LinearLayout>

